# space-efficient-zero-knowledge-proofs

./: Cargo.toml  README.md
src/: air.rs  domain.rs  lib.rs  opening.rs  pcs.rs  perm_lookup.rs  prover.rs  quotient.rs  scheduler.rs  stream.rs  transcript.rs  verifier.rs
